--- a/src/Components/Geo button/styles.module.css
+++ b/src/Components/Geo button/styles.module.css
@@ -5,13 +5,19 @@
     background-color: rgb(189,184,165);
     color: white;
     border: rgb(117,129,127) 2px solid;
-    margin-left: 10px;
-    margin-top: -1px;
     transition: 0.3s;
+    margin-left: 900px;
 }
 
 .geoButton:hover {
     cursor: pointer;
     box-shadow: 0px 2px 8px 2px rgba(141,150,178,.3);
     transform: scale(1.05);
+}
+
+.temp {
+   font-size: 100px;
+   color: white;
+   margin-left: 700px; 
+   margin-top: 50px;
 }
