--- a/src/Components/Search string/styles.module.css
+++ b/src/Components/Search string/styles.module.css
@@ -1,13 +1,17 @@
+.searchStringAndButton {
+    display: flex;
+}
+
 .searchStringContainer {
     background-color: rgb(189,184,165);
-    padding: 5px 5px;
+    padding-left: 10px;
     border-radius: 30px;
     border: rgb(117,129,127) 2px solid;
     color: white;
-    margin-left: 920px;
-    width: 210px;
-    height: 30px;
+    width: 230px;
+    height: 40px;
     display: flex;
+    margin-left: 10px;
 }
 
 .searchStringInput {
@@ -15,6 +19,24 @@
     background-color: rgb(189,184,165);
     margin-left: 2px;
     border: none;
-    width: 180px;
+    width: 155px;
     color: white;
+}
+
+.forecastButton {
+    width: 45px;
+    height: 40px;
+    border-radius: 45%;
+    background-color: transparent;
+    color: white;
+    border: none;
+    border-left: rgb(117,129,127) 3px solid;
+    transition: 0.3s;
+    margin-left: 2px;
+}
+
+.forecastButton:hover {
+    cursor: pointer;
+    box-shadow: 0px 2px 8px 2px rgba(141,150,178,.3);
+    transform: scale(1.05);
 }
