--- a/src/Components/Weather blocks/styles.module.css
+++ b/src/Components/Weather blocks/styles.module.css
@@ -1,19 +1,27 @@
 .temp {
     font-family: Arial, sans-serif;
-    font-size: 100px;
+    font-size: 90px;
     margin-top: 100px;
     margin-left: -250px;
-    color: white;
+    color: #FFFF00;
+    text-shadow: 2px 2px 5px #8B4513;
     font-weight: 500;
+    width: 270px;
+    height: 80px;
+
 }
 
 .weather {
     font-family: Arial, sans-serif;
-    font-size: 70px;
+    font-size: 50px;
     margin-left: -1000px;
     margin-top: 105px;
-    color: white;
+    color: #FFFF00;
+    text-shadow: 2px 2px 5px #8B4513;
     font-weight: 500;
+    width: 700px;
+    height: 80px;
+
 }
 
 .pressureBlock {
@@ -24,7 +32,8 @@
 .pressure {
     font-family: Arial, sans-serif;
     font-size: 50px;
-    color: white;
+    color: #FFFF00;
+    text-shadow: 2px 2px 5px #8B4513;
     font-weight: 200;
     margin-bottom: 10px;
 }
@@ -32,7 +41,109 @@
 .pressureCaption {
     font-family: Arial, sans-serif;
     font-size: 17px;
-    color: white;
+    color: #FFFF00;
+    text-shadow: 2px 2px 5px #8B4513;
+    font-weight: 200;
+    margin-left: 10px;
+}
+
+.humidityBlock {
+    margin-top: 300px;
+    margin-left: 50px;
+}
+
+.humidity {
+    font-family: Arial, sans-serif;
+    font-size: 50px;
+    color: #FFFF00;
+    text-shadow: 2px 2px 5px #8B4513;
+    font-weight: 200;
+    margin-bottom: 10px;
+}
+
+.humidityCaption {
+    font-family: Arial, sans-serif;
+    font-size: 17px;
+    color: #FFFF00;
+    text-shadow: 2px 2px 5px #8B4513;
+    font-weight: 200;
+    margin-left: 10px;
+}
+
+.windSpeedBlock {
+    margin-top: 300px;
+    margin-left: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.windSpeed {
+    font-family: Arial, sans-serif;
+    font-size: 50px;
+    color: #FFFF00;
+    text-shadow: 2px 2px 5px #8B4513;
+    font-weight: 200;
+    margin-bottom: 10px;
+}
+
+.windSpeedCaption {
+    font-family: Arial, sans-serif;
+    font-size: 17px;
+    color: #FFFF00;
+    text-shadow: 2px 2px 5px #8B4513;
+    font-weight: 200;
+    margin-left: 10px;
+}
+
+.sunriseBlock {
+    margin-top: 470px;
+    margin-left: -550px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.sunrise {
+    font-family: Arial, sans-serif;
+    font-size: 50px;
+    color: #FFFF00;
+    text-shadow: 2px 2px 5px #8B4513;
+    font-weight: 200;
+    margin-bottom: 10px;
+}
+
+.sunriseCaption {
+    font-family: Arial, sans-serif;
+    font-size: 17px;
+    color: #FFFF00;
+    text-shadow: 2px 2px 5px #8B4513;
+    font-weight: 200;
+    margin-left: 10px;
+}
+
+.sunsetBlock {
+    margin-top: 470px;
+    margin-left: 270px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.sunset {
+    font-family: Arial, sans-serif;
+    font-size: 50px;
+    color: #FFFF00;
+    text-shadow: 2px 2px 5px #8B4513;
+    font-weight: 200;
+    margin-bottom: 10px;
+}
+
+.sunsetCaption {
+    font-family: Arial, sans-serif;
+    font-size: 17px;
+    color: #FFFF00;
+    text-shadow: 2px 2px 5px #8B4513;
     font-weight: 200;
     margin-left: 10px;
 }
