--- a/src/Components/Geo button/styles.module.css
+++ b/src/Components/Geo button/styles.module.css
@@ -3,8 +3,8 @@
     height: 45px;
     border-radius: 50%;
     background-color: #FFFF73;
-    color: #232323;
-    border: #9e9ea0 2px solid;
+    color: #851E58;
+    border: #8B4513 2px solid;
     transition: 0.3s;
     margin-left: 650px;
 }
