--- a/src/Components/Switch data/styles.module.css
+++ b/src/Components/Switch data/styles.module.css
@@ -11,7 +11,7 @@
     height: 38px;
     background-color: #FFFF00;
     border-radius: 30px;
-    border: 2px solid gray;
+    border: 2px solid #8B4513;
 }
        
 .toggle:after {
@@ -20,7 +20,7 @@
     width: 37px;
     height: 37px;
     border-radius: 50%;
-    background-color: gray;
+    background-color: #8B4513;
     top: 0.5px; 
     left: 1px;
     transition:  all 0.5s;
@@ -53,7 +53,7 @@
 }
        
 .checkbox:checked + .toggle {
-    background-color: red;
+    background-color: #CD5C9C;
 }
        
 .checkbox { 
