--- a/src/Components/Five days/styles.module.css
+++ b/src/Components/Five days/styles.module.css
@@ -28,6 +28,11 @@
     color: #851E58;
 }
 
+.weatherIcon {
+    width: 50px;
+    height: 50px;
+}
+
 .dayTempMax {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
